--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.28.4",
+    "antd": "^5.16.1",
     "api": "^6.1.1",
     "next": "^14.1.3",
     "react": "^18.2.0",
